# financial-pipeline

./: .env.example  .gitignore  Dockerfile  README.md  definitions.py  docker-compose.yml  pyproject.toml  resources.py  workspace.yaml
.github/workflows/: ci.yml
.tmp_dagster_home_j28jitn7/history/: runs.db
.tmp_dagster_home_j28jitn7/history/runs/: .db  8e395dcf-42ad-44c5-be73-465da4027d62.db  9a2edd2d-0e40-46e3-8fbf-687f9615e3b4.db  d7c6d24e-9a09-4c75-94f0-84cbff921d90.db  index.db
.tmp_dagster_home_j28jitn7/schedules/: schedules.db
.tmp_dagster_home_j28jitn7/storage/: mergeAsset  purchaseAsset
assets/: gecko_data.py  gold_trending_prices.py  raw_coins_data.py  raw_trending_data.py  silver_coins.py  silver_trending.py
dagster_coingecko_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/: clientAsset
tests/: test_transforms.py
