[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "dagster-coingecko-pipeline"
version = "0.1.0"
description = "Pipeline ELT de criptomoedas com Dagster, CoinGecko e BigQuery"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Thallys", email = "thallys.soares@nowle.io"},
]
dependencies = [
    "dagster>=1.13",
    "dagster-webserver>=1.13",
    "google-cloud-bigquery>=3.42",
    "coingecko_sdk>=3.0",
    "pandas>=2.0",
    "python-dotenv>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.dagster]
module_name = "definitions"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
